# image-builder-mcp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .spellcheck-en-custom.txt  Containerfile  Makefile  README.md  image-builder-mcp.py  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  lint.yaml  test.yaml
src/image_builder_mcp/: __init__.py  __main__.py  client.py  main.py  oauth.py  server.py
tests/: README.md  __init__.py  conftest.py  test_auth.py  test_get_blueprints.py  test_llm_integration.py
